--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,17 @@
 @import './globals.css';
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 @import 'primereact/resources/themes/lara-light-indigo/theme.css';
 @import 'primeicons/primeicons.css';
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap');
+
+.inter-old-standard-tt {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
 
 :root {
-  font-family: "Inter", sans-serif;
+  font-family: "Roboto Slab", serif;
   font-optical-sizing: auto;
   font-style: normal;
   line-height: 1.5;
