--- a/src/pages/about-me/AboutMe.css
+++ b/src/pages/about-me/AboutMe.css
@@ -2,37 +2,50 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    min-height: 100vh;
+    min-height: 600px;
     padding: 2rem;
     margin: 2rem auto;
 }
 
-.about-me-title {
-    text-align: center;
-    margin-bottom: 2rem;
+.about-me-accordion {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
-.about-me-cards {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 1.5rem;
-}
-
-.about-me-card {
+.about-me-accordion-item {
     background-color: var(--custom-secondary-color);
+    border: 2px solid var(--custom-accent-color);
+    border-radius: 5px;
+    cursor: pointer;
+    overflow: hidden;
+    transition: all 0.3s ease;
+}
+
+.about-me-accordion-item.active {
+    background-color: var(--custom-button-hover-color);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.about-me-accordion-title {
+    font-size: 1.5rem;
+    font-weight: bold;
+    padding: 1rem;
     color: var(--custom-text-color);
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    height: max-content;
+    text-transform: uppercase;
+    border-bottom: 1px solid var(--custom-accent-color);
 }
 
-.about-me-card:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+.about-me-accordion-content {
+    max-height: 0;
+    overflow: hidden;
+    padding: 0 1rem;
+    font-size: 1rem;
+    line-height: 1.6;
+    transition: max-height 0.3s ease, padding 0.3s ease;
 }
 
-.about-me-content {
-    margin-top: 1rem;
-    font-size: 0.9rem;
+.about-me-accordion-item.active .about-me-accordion-content {
+    max-height: 200px;
+    padding: 1rem;
 }
