--- a/src/pages/projects/Projects.css
+++ b/src/pages/projects/Projects.css
@@ -1,37 +1,91 @@
 .projects-page {
     padding: 2rem;
-}
-
-.projects-page h1 {
-    text-align: center;
-    margin-bottom: 2rem;
+    background-color: var(--custom-primary-color);
+    color: var(--custom-text-color);
+    font-family: 'Roboto Slab', serif;
+    min-height: 600px;
 }
 
 .projects-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 1.5rem;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+    justify-content: center;
 }
 
 .project-card {
-    background-color: var(--custom-secondary-color);
-    color: var(--custom-text-color);
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    height: max-content;
+    position: relative;
+    width: 300px;
+    height: 400px;
+    perspective: 1000px; /* Para el efecto 3D */
+    cursor: pointer;
 }
 
-.project-card:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+.project-card-front,
+.project-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    border: 2px solid var(--custom-accent-color);
+    border-radius: 10px;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transition: transform 0.6s ease;
+}
+
+.project-card-front {
+    background-color: var(--custom-secondary-color);
+    color: var(--custom-text-color);
+    text-align: center;
+}
+
+.project-card-back {
+    background-color: var(--custom-button-hover-color);
+    color: var(--custom-text-color);
+    transform: rotateY(180deg); /* Gira la cara trasera */
+    text-align: center;
+}
+
+.project-card:hover .project-card-front {
+    transform: rotateY(180deg); /* Gira la cara frontal al pasar el ratón */
+}
+
+.project-card:hover .project-card-back {
+    transform: rotateY(0); /* Muestra la cara trasera */
+}
+
+.project-title {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+}
+
+.project-description {
+    font-size: 1rem;
 }
 
 .project-details {
-    margin-top: 1rem;
     font-size: 0.9rem;
+    margin-bottom: 1rem;
 }
 
-.p-card-subtitle {
-    color: var(--custom-text-color);
+.project-link {
+    background-color: var(--custom-accent-color);
+    color: var(--custom-button-text-color);
+    border: none;
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    cursor: pointer;
+    text-transform: uppercase;
+    font-size: 0.9rem;
+    transition: background-color 0.3s ease;
+}
+
+.project-link:hover {
+    background-color: var(--custom-button-hover-color);
+    color: var(--custom-button-text-color-hover);
 }
