--- a/src/shared/components/nav-bar/NavBar.css
+++ b/src/shared/components/nav-bar/NavBar.css
@@ -1,22 +1,152 @@
 .nav-bar {
     display: flex;
-    justify-content: flex-end;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    padding: var(--padding-m) var(--padding-l);
-    background-color: transparent;
+    padding-top: var(--padding-m);
+    background-color: var(--custom-primary-color);
     height: 10%;
     width: 100%;
     min-height: 60px;
+    z-index: 20;
+}
 
-    .nav-button {
-        background-color: transparent;
-        border: 2px solid transparent;
-    }
+.nav-bar-content-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    transition: all 0.5s ease; /* Transición suave */
+}
 
-    .nav-bar-content {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        gap: 1rem;
+.nav-bar-content-container.space-b {
+    justify-content: space-between;
+    width: 100%;
+}
+
+.nav-logo {
+    opacity: 0;
+    transform: translateY(-100%);
+    animation: logo-drop 1s ease forwards;
+}
+
+.nav-bar-content {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1rem;
+    padding-bottom: var(--padding-m);
+}
+
+.nav-bar-content-container.space-b .nav-bar-content a {
+    animation: text-slide 0.5s ease forwards; /* Animación de los textos */
+}
+
+.nav-link {
+    position: relative;
+    text-decoration: none;
+    display: inline-block;
+    padding: 0 1px;
+    transition: color ease 0.3s;
+}
+
+.nav-link::after {
+    content: '';
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    height: 5%;
+    left: 0;
+    bottom: 0;
+    background-color: var(--custom-text-color);
+    transition: all ease 0.3s;
+}
+
+.nav-link:hover {
+    color: white;
+}
+
+.nav-link:hover::after {
+    height: 100%;
+}
+
+/* Estilos del botón */
+.p-button.nav-link {
+    background-color: transparent;
+    color: var(--custom-text-color);
+    border: none;
+    border-radius: 0px;
+    padding-bottom: 0.2rem;
+    transition: all 0.3s ease;
+    .p-button-label {
+        font-family: "Roboto Slab", serif;
+        font-size: 1rem;
+        font-weight: 400;
     }
 }
+
+.p-button.nav-link:hover {
+    background-color: var(--custom-text-color);
+    border-color: var(--custom-text-color);
+    .p-button-label {
+        color: white;
+    }
+}
+
+.p-menu {
+    font-family: "Roboto Slab", serif;
+    z-index: 10000;
+    background-color: var(--custom-secondary-color);
+    border: 1px solid var(--custom-accent-color);
+    border-radius: 5px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.p-menu .p-menuitem {
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    color: var(--custom-text-color);
+}
+
+.p-menu .p-menuitem:hover {
+    background-color: var(--custom-button-hover-color);
+    color: var(--custom-button-text-color-hover);
+}
+
+.p-menu .p-menuitem-icon {
+    margin-right: 0.5rem;
+    color: var(--custom-accent-color);
+}
+
+.p-menu .p-menuitem-text {
+    font-weight: bold;
+}
+
+.p-menu .p-menuitem-content {
+    background-color: transparent;
+}
+
+/* Animaciones */
+@keyframes logo-drop {
+    0% {
+        opacity: 0;
+        transform: translateY(-100%);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes text-slide {
+    0% {
+        opacity: 0;
+        transform: translateX(-50%);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
